# sequential_resource_allocation

./: README.md  pyproject.toml
scripts/: algorithm2_gaussian.py  main.py
