[tool.poetry]
name = "receding-resource-allocation"
version = "0.1.0"
description = ""
authors = ["Alexandros Tzikas <33734693+alextzik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.3"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
cvxpy = "^1.7.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
